# epfl-data-index

./: AGENTS.md  README.md  index-config.json  pyproject.toml
scripts/: load_eu_calls.py  load_grants.py  load_prof_api.py  reindex.py
src/epfl_data_index/: __init__.py  client.py  config.py  index.py  load.py  models.py  rerank.py  search.py
src/epfl_data_index/models/: __init__.py  document.py  eu_call.py  grant.py  professor.py  publication.py  relations.py  unit.py
tests/: test_index.py  test_models.py  test_search.py
