[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epfl-data-index"
version = "0.1.0"
description = "Index EPFL research data (publications, professors, units) into OpenSearch"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aitor Pérez", email = "aitor.perez@epfl.ch" }]
dependencies = [
    "numpy",
    "opensearch-py",
    "pandas",
    "pydantic",
    "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/epfl_data_index"]
